# conspiracy-graph

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/data_models/: comment_model_zst.json  submission_model_zst.json  wikidata_response.json
data_extraction/: comments_extraction.py  submissions_extraction.py
scripts/: extract_data.py  extract_data_config.json  extract_entities.py  extract_entities_config.json  extract_entities_progress.json  prep_data.py  prep_data_config.json
scripts/build_knowledge_graph/: build_graph_config.json  build_graph_data.py  build_knowledge_graph_config.json
scripts/extract_data/: extract_data.py  extract_data_config.json
scripts/extract_entities/: extract_entities.py  extract_entities_config.json
scripts/filter_entities/: filter_entities.py  filter_entities_config.json
scripts/prep_data/: prep_data.py
scripts/utility/: gpu_validation.py  query_wikidata.py
